@@ -4,9 +4,8 @@ import java.io.IOException;
 import java.net.URI;
 import java.net.URL;
 import java.nio.file.*;
-import java.nio.file.spi.FileSystemProvider;
-import java.util.Collections;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * Resolves resources which can be found via the class loader.
@@ -23,18 +22,37 @@ public class ResolverForClasspath implements ContentResolver {
 
     public static final ContentResolver INSTANCE = new ResolverForClasspath();
 
-    private Path resolvePath(URI uri) {
+    private List<Path> resolvePaths(URI uri) {
+        List<Path> paths = new ArrayList<>();
+
         if (uri.getScheme() != null && !uri.getScheme().isEmpty()) {
             return null;
         }
-        URL systemResource = ClassLoader.getSystemResource(uri.getPath());
-        if (systemResource == null) {
+//        URL systemResource = ClassLoader.getSystemResource(uri.getPath());
+        try {
+            Enumeration<URL> systemResources = ClassLoader.getSystemResources(uri.getPath());
+            while (systemResources.hasMoreElements()) {
+                URL url = systemResources.nextElement();
+                Path p = normalize(url);
+                paths.add(p);
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+
+        return paths;
+    }
+
+    private Path normalize(URL url) {
+        if (url == null) {
             return null;
         }
-        URI resolved = URI.create(systemResource.toExternalForm());
+        URI resolved = URI.create(url.toExternalForm());
         if (resolved.getScheme().equals("file")) {
-            return Path.of(uri.getPath());
-//            return Path.of(resolved.getPath());
+            Path current = Paths.get("").toAbsolutePath();
+            Path logical = Path.of(resolved.getPath());
+            Path relativePath = current.relativize(logical);
+            return relativePath;
         }
 
         FileSystem fs;
@@ -53,25 +71,27 @@ public class ResolverForClasspath implements ContentResolver {
     }
 
     @Override
-    public Content<?> resolve(URI uri) {
-        Path path = resolvePath(uri);
-        if (path == null) {
-            return null;
-        }
-        return new PathContent(path);
+    public List<Content<?>> resolve(URI uri) {
+        List<Path> paths = resolvePaths(uri);
+        List<Content<?>> contents = paths.stream().map(PathContent::new).collect(Collectors.toList());
+        return contents;
+
     }
 
     @Override
-    public Optional<Path> resolveDirectory(URI uri) {
-        Path path = resolvePath(uri);
-        if (path == null) {
-            return Optional.empty();
+    public List<Path> resolveDirectory(URI uri) {
+        List<Path> path = resolvePaths(uri);
+        List<Path> dirs = new ArrayList<>();
+        for (Path dirpath : path) {
+            if (Files.isDirectory(dirpath)) {
+                dirs.add(dirpath);
+            }
         }
-        if (Files.isDirectory(path)) {
-            return Optional.of(path);
-        } else {
-            return Optional.empty();
-        }
+        return dirs;
+    }
+
+    public String toString() {
+        return this.getClass().getSimpleName();
     }
 
 }
